--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -126,6 +126,9 @@
     {% if entry.website %}
       <a href="{{ entry.website }}" class="btn btn-sm z-depth-0" role="button" target="_blank">Website</a>
     {% endif %}
+    {% if entry.video contains '://' %}
+    <a href="{{ entry.video }}" class="btn btn-sm z-depth-0" role="button" target="_blank">Video</a>
+    {% endif %}
     </div>
 
     <!-- Hidden abstract block -->
