added mobile css modifier for pages; added new mobile tag to chipotle images and experience images;

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,14 @@
 ---
 layout: default
 ---
+<style>
+  @media only screen and (max-width: 576px) {
+    #mobile{
+    width: 100%;
+    }
+  }
+</style>
+
 <div class="post">
 
   <header class="post-header">
